welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(0)=setCouleurBrosse(Color.RED)
                             ^Array1:10: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(1)=setCouleurBrosse(Color.CYAN)
                             ^Array1:11: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(2)=setCouleurBrosse(Color.GREEN)
                             ^Array1:12: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(3)=setCouleurBrosse(Color.MAGENTA)
                             ^Array1:13: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(4)=setCouleurBrosse(Color.ORANGE)
                             ^Array1:14: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(5)=setCouleurBrosse(Color.PINK)
                             ^Array1:17: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(0)=setCouleurBrosse(Color.PINK)
                       ^Array1:18: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(1)=setCouleurBrosse(Color.YELLOW)
                             ^Array1:19: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(2)=setCouleurBrosse(Color.RED)
                             ^Array1:20: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(3)=setCouleurBrosse(Color.ORANGE)
                             ^Array1:21: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(4)=setCouleurBrosse(Color.MAGENTA)
                             ^Array1:22: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	T(5)=setCouleurBrosse(Color.GREEN)
                             ^Array1:23: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(0)=setCouleurBrosse(Color.CYAN)
                       ^Array1:26: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(0)=setCouleurBrosse(Color.RED)
                       ^Array1:27: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(1)=setCouleurBrosse(Color.RED)
                       ^Array1:28: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(2)=setCouleurBrosse(Color.RED)
                       ^Array1:29: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(3)=setCouleurBrosse(Color.RED)
                       ^Array1:30: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(4)=setCouleurBrosse(Color.RED)
                       ^Array1:31: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(5)=setCouleurBrosse(Color.RED)
                       ^Array1:32: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(6)=setCouleurBrosse(Color.RED)
                       ^Array1:33: error: type mismatch;
 found   : Unit
 required: java.awt.Color
  T(7)=setCouleurBrosse(Color.RED)
                       ^