welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
}


var T = new Array[Color](getMondeLargeur())

if(getMondeLargeur()==6){
	T(0)=setCouleurBrosse(Color.RED)
	T(1)=setCouleurBrosse(Color.CYAN)
	T(2)=setCouleurBrosse(Color.GREEN)
	T(3)=setCouleurBrosse(Color.MAGENTA)
	T(4)=setCouleurBrosse(Color.ORANGE)
	T(5)=setCouleurBrosse(Color.PINK)
}
if(getMondeLargeur()==7){
  T(0)=setCouleurBrosse(Color.PINK)
	T(1)=setCouleurBrosse(Color.YELLOW)
	T(2)=setCouleurBrosse(Color.RED)
	T(3)=setCouleurBrosse(Color.ORANGE)
	T(4)=setCouleurBrosse(Color.MAGENTA)
	T(5)=setCouleurBrosse(Color.GREEN)
  T(0)=setCouleurBrosse(Color.CYAN)
}
if(getMondeLargeur()==8){
  T(0)=setCouleurBrosse(Color.RED)
  T(1)=setCouleurBrosse(Color.RED)
  T(2)=setCouleurBrosse(Color.RED)
  T(3)=setCouleurBrosse(Color.RED)
  T(4)=setCouleurBrosse(Color.RED)
  T(5)=setCouleurBrosse(Color.RED)
  T(6)=setCouleurBrosse(Color.RED)
  T(7)=setCouleurBrosse(Color.RED)
}